Removed background image
Background image removed.

--- a/index.html
+++ b/index.html
@@ -2,8 +2,7 @@
 	<head>
 		<style>
 			body{
-				background-image:url('Pres-Countdown-Clock-for-ISC-West-2014.png');
-				background-size:cover;
+				background-color:#000000;
 			}
 		</style>
 		<script src="jquery.js"></script>
