--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 		<script src="angular.js"></script>
 	<link href="bootstrap.css" rel="stylesheet">
 	<script src="bootstrap.js"></script>
-	
+	<script src="countdown.js"></script>
 	
 	</head>
  <!-- Body tag augmented with ngController directive  -->
